FIX: Add spacing around results info (#74)
closes #74

--- a/pages/Search/Search.css
+++ b/pages/Search/Search.css
@@ -86,6 +86,11 @@ h2 {
 
 }
 
+.results-info {
+  margin:          1em;
+  max-inline-size: 30em;
+}
+
 .results-wrapper {
   inline-size:     100%;
   max-inline-size: 100%;
